--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bricolage+Grotesque&display=swap');
+
+.font-poppins{
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Bebas Neue', sans-serif;
+  font-family: 'Bricolage Grotesque', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.label{
+font-size: .9em;
+    color: #3b3b3b;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input-box{
+  box-shadow: inset 0 5px 30px 10px rgba(0,0,0,.08);
+  border-radius: 5px;
+  padding: 5px 20px;
+  font-size: .9em;
+  color: black;
 }
-
+.border{
+  border: 2px solid  #555353;
+  border-radius: 5px;
+}
 .App-header {
-  background-color: #282c34;
+  background: linear-gradient(to top right,#fc2c77 0%,#406c79 100%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 1.4em;
+  color: black;
 }
 
-.App-link {
-  color: #61dafb;
+.section-bg{
+  background-color:white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+select{
+  cursor: pointer;
 }
